<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_component"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="16dp"
    android:scrollbars="none"
    android:transitionGroup="false"
    android:importantForAccessibility="no"/>
