<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conclusion"
    android:layout_marginTop="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/home_item_horizontal_margin">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Header20TextStyle"
        android:text="@string/onboarding_conclusion_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finish_button"
        style="@style/PositiveButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/onboarding_padded_background"
        android:backgroundTint="?actionPrimary"
        android:text="@string/onboarding_finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
