...
        android:textColor="?attr/toolbarTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_tab_button"
        android:layout_width="@dimen/glyph_button_width"
        android:layout_height="@dimen/glyph_button_height"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_new"
        android:tint="?attr/toolbarTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
...
